# invr

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  llms.txt  pyproject.toml
.github/workflows/: codeql.yml  rust.yml
crates/invars/: Cargo.toml
crates/invars-cli/: Cargo.toml
crates/invars-cli/src/: loader.rs  main.rs
crates/invars-py/: Cargo.toml
crates/invars-py/src/: lib.rs  types.rs
crates/invars/src/: lib.rs
crates/invars/src/application/: engine.rs  mod.rs  use_case.rs
crates/invars/src/application/use_cases/: run_spec.rs
crates/invars/src/domain/invariant/: error.rs  mod.rs
crates/invars/src/domain/invariant/value_object/id/: mod.rs
crates/invars/src/domain/report/: mod.rs
crates/invars/src/domain/report/value_object/: metric.rs
crates/invars/src/domain/scope/: mod.rs
crates/invars/src/domain/severity/: error.rs  from_str.rs  mod.rs
crates/invars/src/domain/spec/: error.rs  mod.rs
crates/invars/src/domain/violation/value_object/: metric_value.rs
crates/invars/src/infrastructure/polars/: engine.rs  kind.rs  mod.rs  utils.rs
crates/invars/src/infrastructure/polars/checks/: mod.rs
crates/invars/src/infrastructure/polars/checks/column/: column_exists.rs  column_missing.rs  dtype_is.rs  mod.rs  schema_equals.rs
crates/invars/src/infrastructure/polars/checks/count/: mod.rs
crates/invars/src/infrastructure/polars/checks/custom/: mod.rs
crates/invars/src/infrastructure/polars/checks/date/: date_between.rs  mod.rs  monotonic_increasing.rs  no_future_dates.rs  no_gaps_in_sequence.rs
crates/invars/src/infrastructure/polars/checks/domain/: allowed_values.rs  forbidden_values.rs
crates/invars/src/infrastructure/polars/checks/null/: mod.rs  not_null.rs  null_ratio_max.rs
crates/invars/src/infrastructure/polars/checks/numeric/: mean_between.rs  mod.rs  stddev_max.rs  sum_between.rs  value_between.rs  value_max.rs  value_min.rs
crates/invars/src/infrastructure/polars/checks/relational/: column_equals.rs  conditional_not_null.rs  foreign_key.rs  mod.rs
crates/invars/src/infrastructure/polars/checks/stat/: outlier_ratio_max.rs  percentile_between.rs
crates/invars/src/infrastructure/polars/checks/string/: mod.rs  regex_match.rs  string_length_between.rs  string_length_max.rs  string_length_min.rs
crates/invars/src/infrastructure/polars/checks/unique/: composite_unique.rs  duplicate_ratio_max.rs  mod.rs  unique.rs
crates/invars/src/interface/yaml/: error.rs  import.rs  mod.rs
crates/invars/src/interface/yaml/dto/: mod.rs  severity.rs
crates/invars/src/interface/yaml/mapper/: mod.rs
crates/invars/src/interface/yaml/mapper/invariant/: mod.rs  polars.rs
crates/invars/tests/: run_spec.rs  yaml_loading.rs
crates/invr/: Cargo.toml
crates/invr-cli/: Cargo.toml
crates/invr-cli/src/: cli.rs  main.rs
crates/invr-cli/src/commands/: run.rs
crates/invr-cli/src/output/: json.rs  mod.rs  text.rs
crates/invr-py/: Cargo.toml
crates/invr-py/src/: convert.rs  lib.rs  types.rs
crates/invr/src/application/: engine.rs  error.rs  mod.rs
crates/invr/src/application/use_cases/: mod.rs
crates/invr/src/domain/: mod.rs
crates/invr/src/domain/invariant/: display.rs  error.rs  mod.rs
crates/invr/src/domain/invariant/value_object/id/: error.rs  from_str.rs
crates/invr/src/domain/report/: display.rs  error.rs  mod.rs
crates/invr/src/domain/scope/: display.rs  error.rs  from_str.rs
crates/invr/src/domain/severity/: display.rs
crates/invr/src/domain/spec/: display.rs
crates/invr/src/domain/violation/: display.rs  error.rs  mod.rs
crates/invr/src/domain/violation/value_object/: mod.rs
crates/invr/src/infrastructure/polars/: engine.rs  utils.rs
crates/invr/src/infrastructure/polars/checks/: mod.rs
crates/invr/src/infrastructure/polars/checks/column/: schema_equals.rs
crates/invr/src/infrastructure/polars/checks/custom/: mod.rs
crates/invr/src/infrastructure/polars/checks/date/: date_between.rs  monotonic_increasing.rs
crates/invr/src/infrastructure/polars/checks/domain/: mod.rs
crates/invr/src/infrastructure/polars/checks/null/: not_null.rs
crates/invr/src/infrastructure/polars/checks/numeric/: value_between.rs  value_min.rs
crates/invr/src/infrastructure/polars/checks/relational/: column_equals.rs
crates/invr/src/infrastructure/polars/checks/stat/: mod.rs  outlier_ratio_max.rs  percentile_between.rs
crates/invr/src/infrastructure/polars/checks/unique/: composite_unique.rs  duplicate_ratio_max.rs  mod.rs  n_unique.rs
crates/invr/src/interface/: mod.rs
crates/invr/src/interface/yaml/: import.rs
crates/invr/src/interface/yaml/dto/: invariant.rs  scope.rs  spec.rs
crates/invr/src/interface/yaml/dto/kind/: polars.rs
crates/invr/src/interface/yaml/mapper/: scope.rs  severity.rs
crates/invr/src/interface/yaml/mapper/invariant/: polars.rs
crates/invr/tests/: run_spec.rs  yaml_loading.rs
python/invars/: __init__.py
python/invr/: __init__.py
