[workspace]
resolver = "2"
members = ["crates/invars", "crates/invars-cli"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/lsalenson/invars"
authors = ["Léo Salenson <leo.salenson@outlook.fr>"]
description = "Declarative data validation engine using invariants executed on Polars DataFrames."
keywords = ["data-validation", "invariants", "polars", "data-quality", "data"]
categories = ["data-structures", "database", "science"]
version = "0.1.1"
rust-version = "1.92.0"