[package]
name = "invars"
version = "0.0.1"
publish = true
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[features]
default = []
polars = ["dep:polars"]

[dependencies]
polars = { version = "0.53", features = ["lazy", "is_in", "abs", "strings", "diff"], optional = true }
chrono = "0.4.41"

[dev-dependencies]
proptest = "1"