[package]
name = "invars"
version = "0.0.1"
publish = true
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
documentation = "https://docs.rs/invars"
homepage = "https://github.com/lsalenson/invars"
readme = "../../README.md"
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

[features]
default = []
polars = ["dep:polars"]

[dependencies]
polars = { version = "0.53", features = ["lazy", "is_in", "abs", "strings", "diff"], optional = true }
chrono = "0.4.41"

[package.metadata.docs.rs]
all-features = true
