[package]
name = "invr-py"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Python bindings for invr — run YAML data validation specs on pandas DataFrames."

[lib]
name = "invr_core"
crate-type = ["cdylib"]

[dependencies]
invars = { path = "../invr", features = ["polars"] }
polars = { version = "0.53", features = ["lazy", "csv", "parquet", "ipc", "is_in", "abs", "strings", "diff"] }
pyo3 = { version = "0.23", features = ["extension-module"] }

[features]
extension-module = ["pyo3/extension-module"]
